[package]
name = "jaslog"
version = "0.1.8"
license = "Apache-2.0"
authors = ["Jehan Bruggeman <jehan@bruggem.eu>"]
edition = "2018"
description = "A colored log reader for JSON logs"
readme = "README.md"
homepage = "https://github.com/jbruggem/jaslog"
repository = "https://github.com/jbruggem/jaslog"
documentation = "https://github.com/jbruggem/jaslog"
keywords = ["json", "cli", "logs", "elixir", "java"]
categories = ["command-line-utilities"]
exclude = [
    "doc/*",
    ".github/*",
]

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
colored = "1.9"
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4.19"

[[bin]]
name = "jaslog"
